test/success/std/named_args/simple/main.sk
module Main {

struct Q {

}

fn foo(q: Q) {

}

fn main() {
    let some_q = Q();
    foo(q: some_q);
}

}