test/errors/named_arg/wrong_named_arg/main.sk
module Main {

fn foo(notValue: Int) {
}

fn main() {
    foo(value: 4);
}

}